# build-os

./: .env.sample  .gitignore  .mcp.json  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.claude/: settings.json
.claude/commands/: resolve_failed_e2e_test.md  test_e2e.md
.claude/commands/build-os/: build-all.md  build-api.md  build-section.md  build-shell.md  finalize.md  init.md  resume.md  scaffold.md  status.md  test-e2e-section.md  (+2 more)
adws/adw_modules/: agent.py  agent_sdk.py  build_state.py  data_types.py  e2e_ops.py  git_ops.py  milestone_ops.py  plan_parser.py  scaffold_ops.py  stack_registry.py  utils.py  worktree_ops.py
adws/adw_workflows/: build_all.py  build_and_validate.py  build_milestone.py  build_section_only.py
adws/tests/: conftest.py  test_agent.py  test_agent_sdk.py  test_build_state.py  test_data_types.py  test_e2e_ops.py  test_git_ops.py  test_milestone_ops.py  test_plan_parser.py  test_scaffold_ops.py  test_stack_registry.py  test_utils.py  test_worktree_ops.py
scripts/: start.sh  stop.sh
src/: index.css  main.tsx
src/components/: AppLayout.tsx  BuildPage.tsx  CommandBlock.tsx  FinalizePage.tsx  InitPage.tsx  PhaseNav.tsx  ScaffoldPage.tsx  StepIndicator.tsx  ThemeToggle.tsx  ValidatePage.tsx
src/lib/: build-state-loader.ts  router.tsx
templates/backend/: pyproject.toml  server.py
templates/backend/core/: database.py
templates/backend/tests/: conftest.py
templates/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
(+4 files in other folders)
